--- a/SpotifyAlarmClock/Base.lproj/Main.storyboard
+++ b/SpotifyAlarmClock/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login with Facebook or Spotify" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qpf-Hy-Nwl">
-                                <rect key="frame" x="58" y="82" width="246" height="21"/>
+                                <rect key="frame" x="58" y="108" width="246" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="B3q-K3-fjI"/>
                                     <constraint firstAttribute="width" constant="246" id="Meh-qT-FXW"/>
@@ -86,7 +86,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook" translatesAutoresizingMaskIntoConstraints="NO" id="Vuw-SW-nzP">
-                                <rect key="frame" x="16" y="78" width="30" height="30"/>
+                                <rect key="frame" x="16" y="104" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="7sQ-Nt-f97"/>
                                     <constraint firstAttribute="width" constant="30" id="hEm-2I-BRe"/>
@@ -102,7 +102,7 @@
                             <constraint firstItem="jwy-3d-SEJ" firstAttribute="leading" secondItem="Hly-b4-he7" secondAttribute="leadingMargin" constant="-16" id="ZCN-I1-Kxx"/>
                             <constraint firstItem="IbZ-sC-RCj" firstAttribute="top" secondItem="jwy-3d-SEJ" secondAttribute="bottom" id="fNE-9y-cyJ"/>
                             <constraint firstItem="uv2-zA-TLN" firstAttribute="top" secondItem="ddd-SZ-pVL" secondAttribute="bottom" constant="6" id="gjf-FF-KJa"/>
-                            <constraint firstItem="ddd-SZ-pVL" firstAttribute="top" secondItem="Qpf-Hy-Nwl" secondAttribute="bottom" constant="61" id="iEY-yI-EVU"/>
+                            <constraint firstItem="ddd-SZ-pVL" firstAttribute="top" secondItem="Qpf-Hy-Nwl" secondAttribute="bottom" constant="35" id="iEY-yI-EVU"/>
                             <constraint firstItem="Qpf-Hy-Nwl" firstAttribute="bottom" secondItem="Vuw-SW-nzP" secondAttribute="bottom" constant="-5" id="k2z-8j-pUQ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="jwy-3d-SEJ" secondAttribute="trailing" constant="-16" id="nBK-Y2-aLY"/>
                             <constraint firstItem="uv2-zA-TLN" firstAttribute="centerX" secondItem="jwy-3d-SEJ" secondAttribute="centerX" id="rfY-o5-V9s"/>
@@ -230,7 +230,7 @@
                                     <constraint firstAttribute="height" constant="13" id="caR-pA-T17"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="whE-9B-b8z">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="whE-9B-b8z">
                                 <rect key="frame" x="160" y="160" width="77" height="30"/>
                                 <state key="normal" title="Start Alarm">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
